force-app/main/default/objects/tc9_et__Invoice__c/tc9_et__Invoice__c.object-meta.xml
<CustomObject>
    <description>A master object that holds Invoice details. The Invoice holds header information and groups Invoice Items so they can be used to generate PDF Invoices</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Invoice No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>