force-app/main/default/objects/tc9_et__Invoice__c/fields/Has_Been_Partially_Credited__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Partially_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Partially Credited</label>
    <type>Checkbox</type>
</CustomField>