force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Alternative_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Alternative_Invoice_No__c</fullName>
    <description>As optional alternative invoice number. if populated this value will be used on the Invoice PDF documents instead of the standard Invoice No</description>
    <inlineHelpText>As optional alternative invoice number. if populated this value will be used on the Invoice PDF documents instead of the standard Invoice No</inlineHelpText>
    <label>Alternative Invoice No</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>