force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Balance_Due__c</fullName>
    <description>The balance outstanding on an Invoice. The Invoice Total Inc Tax less the  Invoice Payment Total amounts.</description>
    <formula>tc9_et__Invoice_Total_Inc_Tax__c - tc9_et__Invoice_Payments_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The balance outstanding on an Invoice. The Invoice Total Inc Tax less the  Invoice Payment Total amounts.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>