force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Batch_ID__c</fullName>
    <description>The ID of the Apex Batch Job through which the Invoice was created</description>
    <inlineHelpText>The ID of the Apex Batch Job through which the Invoice was created</inlineHelpText>
    <label>Batch ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>