force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Contact_for_Invoice_Queries_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Contact_for_Invoice_Queries_Name__c</fullName>
    <description>Defines the name of the User who will be detailed as a Invoice Entity&apos;s Invoice Contact. This is derived from the Invoice Entity and used on Email Templates</description>
    <formula>tc9_et__Invoice_Entity__r.tc9_et__Contact_for_Invoice_Queries__r.FirstName &amp; &quot; &quot; &amp;  tc9_et__Invoice_Entity__r.tc9_et__Contact_for_Invoice_Queries__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the name of the User who will be detailed as a Invoice Entity&apos;s Invoice Contact. This is derived from the Invoice Entity and used on Email Templates</inlineHelpText>
    <label>Contact for Invoice Queries Name</label>
    <type>Text</type>
</CustomField>