force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Credit_Reason__c</fullName>
    <description>The reason why this Credit Note is created</description>
    <inlineHelpText>The reason why this Credit Note is created</inlineHelpText>
    <label>Credit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Credit_Reason_Picklists</valueSetName>
    </valueSet>
</CustomField>