force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Credited_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Credited_Date_Time__c</fullName>
    <description>The date &amp; time when this Invoice had a Credit Note credited</description>
    <inlineHelpText>The date &amp; time when this Invoice had a Credit Note credited</inlineHelpText>
    <label>Credited Date Time</label>
    <type>DateTime</type>
</CustomField>