force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Delivery_Method__c</fullName>
    <description>The Delivery Method that will be used in Sending the Invoice</description>
    <inlineHelpText>The Delivery Method that will be used in Sending the Invoice</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Delivery_Method_Picklists</valueSetName>
    </valueSet>
</CustomField>