force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Due_Date__c</fullName>
    <description>Defines the Invoice due date based on the invoice date and the related Invoice Terms</description>
    <inlineHelpText>Defines the Invoice due date based on the invoice date and the related Invoice Terms</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>