force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Enable_Bulk_Resend__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Bulk_Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When True, if the Invoice has already been sent, the User will be able to resend it via bulk send. If False the user will not be able to resend the Invoice via bulk send and they should use single send to resend the Invoice if required.</description>
    <inlineHelpText>When True, if the Invoice has already been sent, the User will be able to resend it via bulk send. If False the user will not be able to resend the Invoice via bulk send and they should use single send to resend the Invoice if required.</inlineHelpText>
    <label>Enable Bulk Resend</label>
    <type>Checkbox</type>
</CustomField>