force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__First_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__First_Sent__c</fullName>
    <description>The Date/Time the Invoice was first emailed</description>
    <inlineHelpText>The Date/Time the Invoice was first emailed</inlineHelpText>
    <label>First Sent</label>
    <type>DateTime</type>
</CustomField>