force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Has_Been_Re_invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Has_Been_Re_invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When an Invoice that has been credited, or is a Credit Note, this field indicates that the Credit Note has been re-invoiced</description>
    <inlineHelpText>When an Invoice that has been credited, or is a Credit Note, this field indicates that the Credit Note has been re-invoiced</inlineHelpText>
    <label>Has Been Re-invoiced</label>
    <type>Checkbox</type>
</CustomField>