force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Date__c</fullName>
    <description>Defines the Invoice Date as specified on the create invoice page during invoice creation.</description>
    <inlineHelpText>Defines the Invoice Date as specified on the create invoice page during invoice creation.</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>