force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Email_CC__c</fullName>
    <description>Used to define additional email addresses the invoice will be emailed too</description>
    <inlineHelpText>Used to define additional email addresses the invoice will be emailed too</inlineHelpText>
    <label>Invoice Email CC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>