force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Group_By_Used__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Group_By_Used__c</fullName>
    <description>The Invoice Group By that was used in creating the Invoice</description>
    <inlineHelpText>The Invoice Group By that was used in creating the Invoice</inlineHelpText>
    <label>Invoice Group By Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Invoice_Group_By_Picklists</valueSetName>
    </valueSet>
</CustomField>