force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Message__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Message__c</fullName>
    <description>Message to be displayed on PDF invoice</description>
    <inlineHelpText>Message to be displayed on PDF invoice</inlineHelpText>
    <label>Invoice Message</label>
    <type>TextArea</type>
</CustomField>