force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_No__c</fullName>
    <description>Defines the Invoice No (if Alternative Invoice No is populated then Alternative Invoice Number else Invoice No (Name) with prefix trimmed off)  This is used for on Email Templates</description>
    <formula>IF(
not(isblank( tc9_et__Alternative_Invoice_No__c )),
tc9_et__Alternative_Invoice_No__c,
Right(Name,10)
)</formula>
    <inlineHelpText>Defines the Invoice No (if Alternative Invoice No is populated then Alternative Invoice Number else Invoice No (Name) with prefix trimmed off)  This is used for on Email Templates</inlineHelpText>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>