force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Payment_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Payment_Status_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True when the Invoice Payment Status is updated on all related transactions</description>
    <inlineHelpText>Set to True when the Invoice Payment Status is updated on all related transactions</inlineHelpText>
    <label>Invoice Payment Status Updated</label>
    <type>Checkbox</type>
</CustomField>