force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Payments_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Payments_Total__c</fullName>
    <description>The total of all related Invoice Payment Amounts</description>
    <inlineHelpText>The total of all related Invoice Payment Amounts</inlineHelpText>
    <label>Invoice Payments Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>