force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_PDF__c</fullName>
    <description>To be used to preview the PDF version of the current Invoice record</description>
    <formula>IF(ISBLANK(tc9_et__View_Invoice_PDF__c),&quot;Create Invoice PDF to View&quot;, HYPERLINK( tc9_et__View_Invoice_PDF__c , 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+ &quot;resource/tc9_et__t2pJ_Images/t2pJ_Images/View_Blue.png&quot;,&quot;Invoice PDF&quot;),&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To be used to preview the PDF version of the current Invoice record</inlineHelpText>
    <label>Invoice PDF</label>
    <type>Text</type>
</CustomField>