force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Setting__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice Setting that applies to the Invoice</description>
    <inlineHelpText>Defines the Invoice Setting that applies to the Invoice</inlineHelpText>
    <label>Invoice Setting</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Invoice Setting defined on the Invoice does not have a matching Account to the Invoice&apos;s Bill To Account. Please review.</errorMessage>
        <filterItems>
            <field>$Source.tc9_et__Invoice_To_Account__c</field>
            <operation>equals</operation>
            <valueField>tc9_et__Invoice_Setting__c.tc9_et__Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>tc9_et__Invoice_Setting__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>