force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_To_Account__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_To_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the Invoice To Account that applies to the Invoice</description>
    <inlineHelpText>The Account the Invoice will be made out to</inlineHelpText>
    <label>Invoice To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Invoices</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>