force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Invoice To Contact that applies to the Invoice</description>
    <inlineHelpText>The Contact the invoice will be made out to</inlineHelpText>
    <label>Invoice To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices with Contact as Invoice To Contact</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>