force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_To_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_To_Contact_First_Name__c</fullName>
    <description>Defines the First name of the Invoice To Contact that applies to the Invoice. This is used for on Email Templates</description>
    <formula>tc9_et__Invoice_To_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the First name of the Invoice To Contact that applies to the Invoice. This is used for on Email Templates</inlineHelpText>
    <label>Invoice To Contact First Name</label>
    <type>Text</type>
</CustomField>