force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Invoice_Total_Inc_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Total_Inc_Tax__c</fullName>
    <description>The Invoice total including Invoice Tax based on related Invoice Items</description>
    <inlineHelpText>The Invoice total including Invoice Tax based on related Invoice Items</inlineHelpText>
    <label>Invoice Total Inc. Tax</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>