force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Is_Credit_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Is_Credit_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Invoice was generated as part of a credit Invoice</description>
    <inlineHelpText>Indicates if Invoice was generated as part of a credit Invoice</inlineHelpText>
    <label>Is Credit Record?</label>
    <type>Checkbox</type>
</CustomField>