force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Is_Re_invoice_Record__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Is_Re_invoice_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Invoice was generated as a result of a re-invoice activity</description>
    <inlineHelpText>Indicates if an Invoice was generated as a result of a re-invoice activity</inlineHelpText>
    <label>Is Re-invoice Record?</label>
    <type>Checkbox</type>
</CustomField>