force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Last_Sent__c</fullName>
    <description>The Date/Time the Invoice was last emailed</description>
    <inlineHelpText>The Date/Time the Invoice was last emailed</inlineHelpText>
    <label>Last Sent</label>
    <type>DateTime</type>
</CustomField>