force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Online_URL__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Online_URL__c</fullName>
    <description>The URL to the online version of the Invoice</description>
    <inlineHelpText>The URL to the online version of the Invoice</inlineHelpText>
    <label>Online URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>