force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Original_Credit__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an Invoice is a credit, this field links the Invoice from which the credit note was created</description>
    <inlineHelpText>When an Invoice is a credit, this field links the Invoice from which the credit note was created</inlineHelpText>
    <label>Original Credit</label>
    <referenceTo>tc9_et__Invoice__c</referenceTo>
    <relationshipLabel>Re-Invoice</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>