force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an Invoice is re-invoiced, this field links the Credit Note from which the re-invoice was created.</description>
    <inlineHelpText>When an Invoice is re-invoiced, this field links the Credit Note from which the re-invoice was created.</inlineHelpText>
    <label>Original Invoice</label>
    <referenceTo>tc9_et__Invoice__c</referenceTo>
    <relationshipLabel>Credit Note</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>