force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Original_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Original_Invoice_No__c</fullName>
    <description>Defines the Original Invoice No of the Original Invoice This is used for on Email Templates</description>
    <formula>tc9_et__Original_Invoice__r.tc9_et__Invoice_No__c</formula>
    <inlineHelpText>Defines the Original Invoice No of the Original Invoice This is used for on Email Templates</inlineHelpText>
    <label>Original_Invoice_No</label>
    <type>Text</type>
</CustomField>