force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__PDF_Generated_Flag__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__PDF_Generated_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Invoice PDF has been generated</description>
    <inlineHelpText>Indicates if the Invoice PDF has been generated</inlineHelpText>
    <label>PDF Generated Flag</label>
    <type>Checkbox</type>
</CustomField>