force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Re_invoiced_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Re_invoiced_Date_Time__c</fullName>
    <description>The date &amp; time when this Credit Note had a Re-Invoice credited</description>
    <inlineHelpText>The date &amp; time when this Credit Note had a Re-Invoice credited</inlineHelpText>
    <label>Re-invoiced Date Time</label>
    <type>DateTime</type>
</CustomField>