force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__Remit_To_Bank_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Remit_To_Bank_Branch_Code__c</fullName>
    <description>Defines the Bank Branch Code that remittance should be paid. This is derived from the Invoice Entity and used for on Email Templates</description>
    <formula>tc9_et__Invoice_Entity__r.tc9_et__Bank_Account_Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Defines the Bank Branch Code that remittance should be paid. This is derived from the Invoice Entity and used for on Email Templates</inlineHelpText>
    <label>Remit To Bank Branch Code</label>
    <type>Text</type>
</CustomField>