force-app/main/default/objects/tc9_et__Invoice__c/fields/tc9_et__View_Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__View_Invoice_PDF__c</fullName>
    <description>To easily select and view the most recent invoice pdf file.</description>
    <inlineHelpText>To easily select and view the most recent invoice pdf file.</inlineHelpText>
    <label>View Invoice PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>