force-app/main/default/objects/tc9_et__Invoice__c/recordTypes/tc9_et__Credit_Invoiceable_Fees.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Credit_Invoiceable_Fees</fullName>
    <active>true</active>
    <description>To be used for Credit Notes relating to Invoiceable Fees</description>
    <label>Credit Invoiceable Fees</label>
</RecordType>