force-app/main/default/objects/tc9_et__Invoice__c/recordTypes/tc9_et__Credit_Payroll_Items.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Credit_Payroll_Items</fullName>
    <active>true</active>
    <description>To be used for Credit Notes relating to Payroll items</description>
    <label>Credit Payroll Items</label>
</RecordType>