force-app/main/default/objects/tc9_et__Invoice__c/recordTypes/tc9_et__Invoiceable_Fees.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoiceable_Fees</fullName>
    <active>true</active>
    <description>To be used for Invoices relating to Invoiceable Fees</description>
    <label>Invoiceable Fees</label>
</RecordType>