force-app/main/default/objects/tc9_et__Invoice__c/recordTypes/tc9_et__Payroll_Items.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Payroll_Items</fullName>
    <active>true</active>
    <description>To be used for Invoices relating to Payroll items</description>
    <label>Payroll Items</label>
</RecordType>