force-app/main/default/objects/tc9_et__Invoice__c/listViews/tc9_et__All.listView-meta.xml
<ListView>
    <fullName>tc9_et__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_et__Invoice_Entity__c</columns>
    <columns>tc9_et__Invoice_To_Account__c</columns>
    <columns>tc9_et__Invoice_To_Contact__c</columns>
    <columns>tc9_et__Invoice_Date__c</columns>
    <columns>tc9_et__Invoice_Total_Ex_Tax__c</columns>
    <columns>tc9_et__Invoice_Total_Inc_Tax__c</columns>
    <columns>tc9_et__Invoice_Total_Tax__c</columns>
    <columns>tc9_et__Has_Been_Credited__c</columns>
    <columns>tc9_et__Has_Been_Re_invoiced__c</columns>
    <columns>tc9_et__Invoice_PDF__c</columns>
    <columns>tc9_et__Invoice_Setting__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>